--- a/Pages/Secondpage.html
+++ b/Pages/Secondpage.html
@@ -29,7 +29,7 @@
 
 <h2 goes to the next page></h2>
 
-<a href="thirdpage.html" > here lies the third page </a>
+<a href="pages/thirdpage.html" > next page</a>
 
 <h3 Raft Wars></h3> <https://www.miniclip.com/games/raft-wars/en/#privacy-settings/>
 
