--- a/Pages/fourthpage.html
+++ b/Pages/fourthpage.html
@@ -28,7 +28,7 @@
 
 <h2 goes to the next page></h2>
 
-<a href="fifthpage.html" > here lies the fifth page </a>
+<a href="pages/fifthpage.html" > next page </a>
 
 <h3 Super Mario Bros></h3> <https://supermariobros.io/>
 
