--- a/Pages/thirdpage.html
+++ b/Pages/thirdpage.html
@@ -28,7 +28,7 @@
 
 <h2 goes to the next page></h2>
 
-<a href="fourthpage.html" > here lies the fourth page </a>
+<a href="pages/fourthpage.html" > next page </a>
 
 <h3 agar.io></h3> <https://agar.io/#ffa/>
 
