--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
 
         body{
-            background-color: maroon;
+            background-color: rgb(247, 119, 0);
 
 
 
@@ -30,7 +30,7 @@
 
 <h2 goes to the next page></h2>
 
-<a href="secondpage.html" > here lies the second page </a>
+<a href="pages/secondpage.html" > next page </a>
 
 <h3 Poptropica></h3> <linkhttps://www.poptropica.com/>
 
